gccida/g0/asm_emit_uninitialised
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1839:24: error: expected expression
asm_emit_uninitialised::$EA4933C185C53E3D5B439ADB4EE0A6DF destination; // [rsp+2Ch] [rbp-4h] 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1841:1: error: use of undeclared identifier 'destination'
destination = asm_dest_local; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1841:15: error: use of undeclared identifier 'asm_dest_local'
destination = asm_dest_local; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1843:1: error: use of undeclared identifier 'destination'
destination = ( BYTE2( decl->block.supercontext) & 2) == 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1844:6: error: use of undeclared identifier 'destination'
if ( destination == asm_dest_bss ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1844:21: error: use of undeclared identifier 'asm_dest_bss'
if ( destination == asm_dest_bss ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1847:6: error: use of undeclared identifier 'destination'
if ( destination == asm_dest_local ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1847:21: error: use of undeclared identifier 'asm_dest_local'
if ( destination == asm_dest_local ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1858:21: error: use of undeclared identifier 'destination'
if ( ( unsigned int)destination > asm_dest_local ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1858:35: error: use of undeclared identifier 'asm_dest_local'
if ( ( unsigned int)destination > asm_dest_local ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/varasm.c:1860:6: error: use of undeclared identifier 'destination'
if ( destination ) 
     ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_emit_uninitialised/src/obj/varasm.o] Error 1
